Fixed bug about cannot click listing on small screen

--- a/src/ps/diazo/vanilla/diazo_resources/less/styles.less
+++ b/src/ps/diazo/vanilla/diazo_resources/less/styles.less
@@ -88,6 +88,9 @@ body #global-wrapper #content .development-summary figure {
 #maincontent #content .listing-summary figure {
     background-color: #e1e1e1;
 }
+#maincontent {
+    overflow: hidden;
+}
 body #global-wrapper .development-summary section {
     width: 60%;
     padding: 0.5% 0 0 2%;
@@ -1713,6 +1716,7 @@ ul#portal-languageselector:hover li {
     }
     .portlet-both #maincontent{
         width: 100%;
+        overflow: hidden;
     }
     body #global-wrapper #content .portlet-both .listing-collection-tile .collection-item{
         width: 100%;
@@ -1977,6 +1981,7 @@ ul#portal-languageselector:hover li {
     }
     .portlet-both #maincontent{
         width: 100%;
+        overflow: hidden;
     }
     body #global-wrapper #content .portlet-both .listing-collection-tile .collection-item{
         width: 100%;
